tests/baselines/reference/override_js3.errors.txt
tests/cases/conformance/override/a.js(7,5): error TS8009: The 'override' modifier can only be used in TypeScript files.


==== tests/cases/conformance/override/a.js (1 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
        override foo (v) {}
        ~~~~~~~~
!!! error TS8009: The 'override' modifier can only be used in TypeScript files.
        /** @override */
        fooo (v) {}
    }
    